2005-05-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c (isstringvar) src/util.h: Have this function always
	return FALSE if gnuplot is configured with --disable-stringvariables.

	* term/tgif.trm (TGIF_options): Accept string variable for font name.

	* src/hidden3d.c (build_networks): If vertex has previously been flagged
	as invalid, do not pass it on for further processing.
	Fixes bug #1194035 / #1194055

2005-04-29  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm term/gd.trm term/pdf.trm src/misc.c src/gplt_x11.c:
	Whitespace cleanup.

	* term/gd.trm (PNG_options): Accept string variable for font name.

	* src/plot2d.c (get_data eval_plots): If the x-axis is in log mode,
	treat boxwidth as a constant visual width rather than as a constant
	number of units along x, which would produce narrower boxes as x
	increases.  Issue an error message if the x-axis is in log mode
	when the plot style is histograms.

	* docs/gnuplot.doc: Document behaviour of 'set boxwidth' for log axes.

	* docs/gnuplot.doc term/x11.trm term/post.trm: Clean up line length
	and other issues that cause errors during creation of TeX docs.

2005-04-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d.c (set_plot_with_palette): Fix for 'splot x, y with pm3d'.

2005-04-28  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_options): Accept string variables for terminal
	options 'font <foo>' and 'title <bar>'.

	* term/post.trm (PS_options) term/emf.trm (EMF_options): 
	Accept string variable for font name.

2005-04-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.wc: Update for more Watcom-like usage of tools.

	* config/config.wc: New file.  Promised long ago, when I added
	makefile.wc, finally got round to doing it.
	
	* config/config.oww, config/makefile.oww: Rewrite for more
	features and more Watcom-like usage of tools.

	* src/readline.c [__WATCOMC__]: Add #include <conio.h> for getch()
	function.
